<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ad8-J4-G7q">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--WeatherVC-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="WeatherVC" customModule="pelmorex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="uLo-qT-dEP">
                                <rect key="frame" x="304" y="64" width="90" height="51"/>
                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="90" id="bFI-yy-ZjT"/>
                                    <constraint firstAttribute="height" constant="50" id="qaQ-vW-kgx"/>
                                </constraints>
                                <segments>
                                    <segment title="°C"/>
                                    <segment title="°F"/>
                                </segments>
                                <connections>
                                    <action selector="segmentChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="W9g-Th-afH"/>
                                </connections>
                            </segmentedControl>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="w7x-Xm-cPN">
                                <rect key="frame" x="0.0" y="124" width="414" height="738"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uVN-EF-XJf">
                                <rect key="frame" x="20" y="64" width="120" height="50"/>
                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="BjZ-jn-XNI"/>
                                    <constraint firstAttribute="width" constant="120" id="WPH-87-8gI"/>
                                </constraints>
                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Question?"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="questionButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hT9-lB-OUf"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="w7x-Xm-cPN" secondAttribute="trailing" id="3kz-aW-v3V"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="w7x-Xm-cPN" secondAttribute="bottom" id="6KN-Ib-CBS"/>
                            <constraint firstItem="w7x-Xm-cPN" firstAttribute="top" secondItem="uVN-EF-XJf" secondAttribute="bottom" constant="10" id="9jo-2g-MRt"/>
                            <constraint firstItem="w7x-Xm-cPN" firstAttribute="top" secondItem="uLo-qT-dEP" secondAttribute="bottom" constant="10" id="Jy9-YJ-w7Z"/>
                            <constraint firstItem="w7x-Xm-cPN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="T5p-Dd-fYP"/>
                            <constraint firstItem="uLo-qT-dEP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="ecf-5M-mf3"/>
                            <constraint firstItem="uVN-EF-XJf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="jtr-wY-hy8"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uLo-qT-dEP" secondAttribute="trailing" constant="20" id="lOW-jr-gvp"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="cBX-Ym-Nrd"/>
                    <nil key="simulatedTopBarMetrics"/>
                    <connections>
                        <outlet property="degreeTypeSegment" destination="uLo-qT-dEP" id="RnW-pF-7ag"/>
                        <outlet property="tableView" destination="w7x-Xm-cPN" id="6I3-Y3-fsD"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="992.75362318840587" y="83.705357142857139"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="Bmc-Ts-KPb">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ad8-J4-G7q" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hUv-Kq-hjm">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jmo-LX-iFb"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dsi-Dt-ZIC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="82.608695652173921" y="83.705357142857139"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemGray5Color">
            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
