...
        errorLabel.isHidden = true
        nameLabel.label(textStr: "Name",
                        textColor: UIColor.darkGray,
                        textFont: UIFont.systemFont(ofSize: 20, weight: .semibold),
                        lineSpacing: -0.25, paragraphStyle: NSMutableParagraphStyle())
        
        emailLabel.label(textStr: "Email",
                         textColor: UIColor.darkGray,
                         textFont: UIFont.systemFont(ofSize: 20, weight: .semibold),
                         lineSpacing: -0.25, paragraphStyle: NSMutableParagraphStyle())
        
        phoneLabel.label(textStr: "Phone number",
                         textColor: UIColor.darkGray,
...
